--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -864,6 +864,10 @@
 1081102: Diversion Command
 1081103: Evil Crushing Brilliant Fist
 1081104: Diversion Command+
+1081201: Liberation Tactics
+1081202: Heavy Hit
+1081203: Evil Crushing Bullet
+1081204: Evil Crushing Bullet+
 2081101: Supporting Fist
 2081102: Supporting Fist+
 2081103: Supporting Fist++
@@ -874,6 +878,7 @@
 3081105: Spirit of Loyalty V
 3081106: Spirit of Loyalty VI
 8081101: Tactical Martial Arts
+8081201: Tactical Martial Arts
 # Borealis
 1082101: Sixto Cantus
 1082102: Stellaris Elegia
@@ -1343,6 +1348,49 @@
 3170104: Fixpoint IV
 3170105: Fixpoint V
 3170106: Fixpoint VI
+# Giansar
+1124101: Trojan Code
+1124102: Kernel Steel
+1124103: Malicious Exploit
+1124104: Malicious Exploit+
+2124101: Emergency Mimicry
+2124102: Emergency Mimicry+
+2124103: Emergency Mimicry++
+3124101: Remote Code Execution I
+3124102: Remote Code Execution II
+3124103: Remote Code Execution III
+3124104: Remote Code Execution IV
+3124105: Remote Code Execution V
+3124106: Remote Code Execution VI
+8124101: Trojan Code
+# Zaniah
+1182101: Loud Crack
+1182102: Whip Pep
+1182103: Treasure of Kalanchoe
+1182104: Loud Crack+
+2182101: Treasure Hunt
+2182102: Treasure Hunt+
+2182103: Treasure Hunt++
+3182101: Beautiful Tricks I
+3182102: Beautiful Tricks II
+3182103: Beautiful Tricks III
+3182104: Beautiful Tricks IV
+3182105: Beautiful Tricks V
+3182106: Beautiful Tricks VI
+# Yuhang
+1183101: Burst
+1183102: Clump
+1183103: Grand Banquet
+1183104: Clump+
+2183101: Instant Cooking
+2183102: Instant Cooking+
+2183103: Instant Cooking++
+3183101: One Large Serving I
+3183102: One Large Serving II
+3183103: One Large Serving III
+3183104: One Large Serving IV
+3183105: One Large Serving V
+3183106: One Large Serving VI
 #Passive
 6030104: I am water
 6051102: Fire element
