--- a/_data/wiki/Illustrator.yml
+++ b/_data/wiki/Illustrator.yml
@@ -43,7 +43,7 @@
 "タルトル":
   en: "Tarutoru"
 "灰濁クロム":
-  en: "BK_Mita"
+  en: "Gray Chrome/BK_Mita"
 "うすくちぽてち":
   en: "Usukuchi Potechi"
 "牟草るふ":
@@ -59,4 +59,8 @@
 "沃":
   en: "Vorusu"
 "園見 喝":
-  en: "Omisokatu0141"
+  en: "Katsu Sonomi/Omisokatu0141"
+"リコセ":
+  en: "Rikose"
+"ふぁい":
+  en: "Fai/Fai-Storage"
