--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -878,7 +878,7 @@
 3081105: Spirit of Loyalty V
 3081106: Spirit of Loyalty VI
 8081101: Tactical Martial Arts
-8081201: Tactical Martial Arts
+8081202: Heavy Hit
 # Borealis
 1082101: Sixto Cantus
 1082102: Stellaris Elegia
@@ -1391,6 +1391,7 @@
 3183104: One Large Serving IV
 3183105: One Large Serving V
 3183106: One Large Serving VI
+8183101: Yuhang Auto
 #Passive
 6030104: I am water
 6051102: Fire element
