--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -581,3 +581,8 @@
   description: "Act as number counter"
   isGoodStatus: 2
   icon: "status_buff_special"
+"1081201":
+  name: "Buff Count"
+  description: "Act as number counter"
+  isGoodStatus: 2
+  icon: ""
