Update manual override giansar
SO THIS IS THE PROBLEM, GAHH

--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -58,8 +58,8 @@ of view after the skill is cast (maxed at 11000 view) /100%<br>\
 8169104: ""
 
 # Giansar S3, S3+
-1124102: "[base skill] target enemy will have higher chance of being targeted when opponent is in auto action mode for 1 action(s)/100%<br>\
-[base skill] Incoming damage to target enemy increased by 1.3x for 1 next attack(s)/100%<br>\
+1124102: "[base skill] target enemy will have higher chance of being targeted when opponent is in auto action mode for 1 turn/100%<br>\
+[base skill] Incoming damage to target enemy increased by 1.3x for 1 turn/100%<br>\
 [base skill] (extra_cond: current action is not activated by another skill) Highest ATK ally (excluding self) uses skill 1 on random enemy/100%"
 1124103: "[base skill] Gain 2 combo(s) /100%<br>\
 [base skill] (extra_cond: Enemy count = 1) SPD Down by -30 to all enemies for 1 action(s) /100%<br>\
