--- a/_data/wiki/Item.yml
+++ b/_data/wiki/Item.yml
@@ -200,3 +200,6 @@
 186:
   name: "Hero Festival Flag"
   description: "Proof of victory at the Hero Festa. Can be exchanged for items at the exchange."
+190:
+  name: "Masquerade Corsage"
+  description: "Corsages individually crafted by clothing artisans. Can be exchanged for items at the exchange."
