--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -576,6 +576,11 @@
   description: "Increase S1 damage by 10% per stack, max 3 stack, gain 1 stack of Steel Fist every time Andrew get def up buff"
   isGoodStatus: 2
   icon: ""
+"2641":
+  name: "Gospel"
+  description: "Hp recovery skills invoked by self +50%"
+  isGoodStatus: 1
+  icon: "status_bless"
 "1035101":
   name: "Multi Observation"
   description: "Act as number counter"
