--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -586,6 +586,11 @@
   description: "Act as number counter"
   isGoodStatus: 2
   icon: "status_buff_special"
+"1051202":
+  name: "Waltz"
+  description: "Atk+20% for 2 turn, cannot be given to Moonlight Shadow Nessen"
+  isGoodStatus: 1
+  icon: "status_buff_special"
 "1081201":
   name: "Buff Count"
   description: "Act as number counter"
