--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -591,6 +591,11 @@
   description: "Atk+20% for 2 turn, cannot be given to Moonlight Shadow Nessen"
   isGoodStatus: 1
   icon: "status_buff_special"
+"1051205":
+  name: "Nessen Special"
+  description: "Act as number counter"
+  isGoodStatus: 1
+  icon: ""
 "1081201":
   name: "Buff Count"
   description: "Act as number counter"
