--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -14,6 +14,12 @@
 [base skill] Deal 100% of damage to target enemy /100%<br>\
 [base skill] Remove 999 Defense Up status from self /100%"
 
+# Astosis Passive
+8189103: "[When enemy with debuff is damaged] Apply Pledge (Viewpoint consumption of skill 1,2,3 -5%, not buff or debuff) to self for 1 action /100%"
+8189103: "[While alive] Rate of inflicting debuff is increased by 1.5x for all allies /100%"
+8189104: ""
+8189105: ""
+
 # Barrel variant S3
 1007203: "[base skill] Deal 100% of damage to all enemies /100%<br>\
 [base skill] Increase the damage of this skill by 20% permanently, up until 160% of damage /100%"
@@ -104,6 +110,27 @@ If the skill can be activated, activate this skill again (up to 4 times). Additi
 # Kouki variant Passive 2
 8018202: ""
 
+# Nessen Variant S1
+1051201: "[base skill] Remove 1 debuff(s) from target ally /100%<br>\
+[base skill] Remove all Waltz status from allies /100%<br>\
+[base skill] Apply Waltz (Atk +20%) to target allies for 2 turn /100%"
+
+# Nessen Variant S2
+1051202: "[base skill] Apply  Attack Up 1.5x to target ally for 1 next attack(s) /100%<br>\
+[base skill] Add 6000 views /100%<br>"
+
+1051204: "[base skill] Apply  Attack Up 1.5x to target ally for 1 next attack(s) /100%<br>\
+[base skill] Add 8000 views /100%<br>"
+
+# Nessen Variant S3
+1051203: "[base skill] Heal all allies for 70% of own ATK value /100%<br>\
+[base skill] Incoming damage reduced by 50% to all allies for 1 next attack(s) /100%<br>\
+[base skill] (extra_cond: View>10000) Act again (once per turn) /100%"
+
+# Nessen Variant Passive
+8051201: "[base skill] After using any skill (except sidekick skill), ally with Waltz will use skill 1 to random enemy /100%"
+8051202: ""
+
 # Obsidius S1
 1160101: "[base skill] Deal 50% of damage to target enemy /100%<br>\
 [base skill] Apply 2 stack of Stubborn to self /100% (Stubborn doesn't count as buff or debuff)"
@@ -161,6 +188,12 @@ doesn't take effect if the damage defeat the receiver) for 2 turns /100%"
 1065101: "[base skill] Deal 45% of damage to target enemy /100%<br>\
 [base skill] Decrease HP by -5% to target enemy for 2 turn(s) /60%<br>\
 [base skill] Activate this skill once again if the enemy is still alive /100%"
+
+# Yohack S3
+1190103: "[base skill] Apply  AtkKup+ (Atk increase by 1.8x, this status is treated as normal Atkup) to target ally for 1 next attack(s) /100%<br>\
+[base skill] Apply Gospel (recovery amount of skill used by self +50%) to target ally for 1 action /100%<br>\
+[base skill] Apply Awakening (Viewpoint requirement to use skill is halved) to target ally for 1 action /100%<br>\
+[base skill] Self cannot use skill 3 for 3 turn(s) /100%"
 
 # Unexplored Skills
 9000001: "View Gain or Special role allies' skill View Gain +100%"
