--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -16,7 +16,7 @@
 
 # Astosis Passive
 8189101: "[When enemy with debuff is damaged] Apply Pledge (Viewpoint consumption of skill 1,2,3 -5%, not buff or debuff) to self for 1 action /100%"
-8189103: "[While alive] Rate of inflicting debuff is increased by 1.5x for all allies /100%"
+8189103: "[When not debuffed] Rate of inflicting debuff is increased by 1.5x for all allies /100%"
 8189104: ""
 8189105: ""
 
