--- a/_data/wiki/SkillNameTranslation.yml
+++ b/_data/wiki/SkillNameTranslation.yml
@@ -1404,7 +1404,7 @@
 # Yohack
 1190101: Reserans
 1190102: Semita Lucis
-1190103: Omnes Cravis
+1190103: Omnes Clavis
 1190104: Reserans+
 2190101: I understand!
 2190102: I understand!+
@@ -1415,7 +1415,7 @@
 3190104: Dependable Disposition IV
 3190105: Dependable Disposition V
 3190106: Dependable Disposition VI
-8190101: Omnes Cravis
+8190101: Omnes Clavis
 8190102: Yohack Auto
 # Player
 2999101: Exceptional Good Luck
