--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -190,7 +190,7 @@ doesn't take effect if the damage defeat the receiver) for 2 turns /100%"
 [base skill] Activate this skill once again if the enemy is still alive /100%"
 
 # Yohack S3
-1190103: "[base skill] Apply  Atkup+ (Atk increase by 1.8x, this status is treated as normal Atkup) to target ally for 1 next attack(s) /100%<br>\
+1190103: "[base skill] Apply  Atkup+ (Multiply Atk by 1.8x, this status is treated as normal Atkup) to target ally for 1 next attack(s) /100%<br>\
 [base skill] Apply Gospel (recovery amount of skill used by self +50%) to target ally for 1 action /100%<br>\
 [base skill] Apply Awakening (Viewpoint requirement to use skill is halved) to target ally for 1 action /100%<br>\
 [base skill] Self cannot use skill 3 for 3 turn(s) /100%"
