--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -191,8 +191,8 @@ doesn't take effect if the damage defeat the receiver) for 2 turns /100%"
 
 # Yohack S3
 1190103: "[base skill] Apply  Atkup+ (Multiply Atk by 1.8x, this status is treated as normal Atkup) to target ally for 1 next attack(s) /100%<br>\
-[base skill] Apply Gospel (recovery amount of skill used by self +50%) to target ally for 1 action /100%<br>\
-[base skill] Apply {{ 8 | status_description }} to target ally for 1 action /100%<br>\
+[base skill] Apply Gospel (Recovery amount of skill used by self +50%) to target ally for 1 action /100%<br>\
+[base skill] Apply Awakening (Viewpoint required to use skill is halved) to target ally for 1 action /100%<br>\
 [base skill] Self cannot use skill 3 for 3 turn(s) /100%"
 
 # Unexplored Skills
