--- a/_data/wiki/Item.yml
+++ b/_data/wiki/Item.yml
@@ -182,6 +182,24 @@
 137:
   name: "High-purity Heronium"
   description: "Unique currency with a time limit used between hero offices. Can be exchanged for items at the exchange."
+147:
+  name: "Crystal Present"
+  description: "Crystal pendant tops popular as local souvenirs. They can be exchanged for items at the exchange shop."
+148:
+  name: "Christmas Melt Combat Disc"
+  description: "Disc of battle BGM for Christmas Melt Countdown. BGM can be changed in the office."
+149:
+  name: "Christmas Melt Boss Battle Disc"
+  description: "Disc of boss battle BGM for Christmas Melt Countdown. BGM can be changed in the office."
+150:
+  name: "Christmas Melt Disc"
+  description: "Disk of background BGM for Christmas Melt Countdown. BGM can be changed in the office."
+151:
+  name: "Crystal Tower Hologram"
+  description: "A hologram that projects images of the interior of the Crystal Tower onto an office background. The office background can be changed."
+152:
+  name: "Crystal Tower Innermost Hologram"
+  description: "A hologram that projects images of the innermost part of the Crystal Tower onto an office background. The office background can be changed."
 153:
   name: "New Year's gift"
   description: "Rewards received in celebration of the New Year. Can be exchanged for special New Year's item at the exchange shop."
@@ -203,3 +221,12 @@
 190:
   name: "Masquerade Corsage"
   description: "Corsages individually crafted by clothing artisans. Can be exchanged for items at the exchange."
+11033201:
+  name: "Procy Santa Doll"
+  description: "A gift of warm memories from a crybaby, laughing Santa. You can customize the battle model of Holy Frost Gomeisa"
+11125101:
+  name: "Automated Present-kun"
+  description: "A memorable and reasonable gift that deliver itself. You can customize the battle model of Viscunam"
+11126101:
+  name: "Crystal Amulet"
+  description: "A crystal clear stone that feels somewhat invigorating.. You can customize the battle model of Sensettia"
