--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -576,6 +576,11 @@
   description: "Increase S1 damage by 10% per stack, max 3 stack, gain 1 stack of Steel Fist every time Andrew get def up buff"
   isGoodStatus: 2
   icon: ""
+"268":
+  name: "Vertigo"
+  description: "Incoming damage x1.2"
+  isGoodStatus: 0
+  icon: "status_defdown"
 "2641":
   name: "Gospel"
   description: "Hp recovery skills invoked by self +50%"
@@ -599,5 +604,15 @@
 "1081201":
   name: "Buff Count"
   description: "Act as number counter"
+  isGoodStatus: 2
+  icon: ""
+"1031201":
+  name: "Starlight"
+  description: "Every time an ally except \"Starry Night\" Monomasa deals damage to enemy, charge +1 (up to 8). This is neither buff nor debuff."
+  isGoodStatus: 2
+  icon: ""
+"1015203":
+  name: "Unleash"
+  description: "When damage is taken, count -1, This is neither a buff nor debuff."
   isGoodStatus: 2
   icon: ""
