--- a/_data/wiki/Item.yml
+++ b/_data/wiki/Item.yml
@@ -221,6 +221,18 @@
 190:
   name: "Masquerade Corsage"
   description: "Corsages individually crafted by clothing artisans. Can be exchanged for items at the exchange."
+196:
+  name: "Gifts for Santa"
+  description: "A thank you gifts for Santa. Can be exchanged for items at the exchange."
+197:
+  name: "Christmas Cityscape Hologram"
+  description: "Hologram projecting Christmas cityscape on office background."
+198:
+  name: "Workout Disc"
+  description: "Disc of background BGM for Santa Claus Workout."
+199:
+  name: "Workout Combat Disc"
+  description: "Disc of battle BGM for Santa Claus Workout."
 11033201:
   name: "Procy Santa Doll"
   description: "A gift of warm memories from a crybaby, laughing Santa. You can customize the battle model of Holy Frost Gomeisa"
