--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -365,10 +365,9 @@
   icon: "b_skill_special" 
 "74":
   name: "Reduce view Cost"
-  description: "Reduce view (cosmetic purpose only)"
+  description: "Reduce view cost by 2000"
   isGoodStatus: 2
   icon: "status_awakening" 
-  wiki_hidden: true
 "75":
   name: "Atk Up (Small)"
   description: "Increase Atk by 1.3 times"
