--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -615,3 +615,8 @@
   description: "When damage is taken, count -1, This is neither a buff nor debuff."
   isGoodStatus: 2
   icon: ""
+"1192101":
+  name: "Astar Buff"
+  description: "Atk +20%."
+  isGoodStatus: 2
+  icon: ""
