--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -585,6 +585,11 @@
   description: "Hp recovery skills invoked by self +50%"
   isGoodStatus: 1
   icon: "status_bless"
+"1015201":
+  name: "Polaris Special"
+  description: "Act as number counter"
+  isGoodStatus: 2
+  icon: ""
 "1035101":
   name: "Multi Observation"
   description: "Act as number counter"
