--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -565,9 +565,19 @@
   description: "When removed increase Atk by 10% for every stack (max 100% increase) at the next turn, removed at the end of this turn, neither buff nor debuff"
   isGoodStatus: 2
   icon: ""
+"214":
+  name: "Yoshiori Special"
+  description: "Apply taunt to self"
+  isGoodStatus: 2
+  icon: ""
 "215":
   name: "Inspire"
   description: "Reduce skill 3 VP cost by 1000, removed after one turn, cannot be removed, neither buff nor debuff"
+  isGoodStatus: 2
+  icon: ""
+"216":
+  name: "Yoshiori Special"
+  description: "Apply taunt to self"
   isGoodStatus: 2
   icon: ""
 "221":
