--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -627,7 +627,7 @@
   icon: ""
 "1015203":
   name: "Unleash"
-  description: "When damage is taken, count -1, This is neither a buff nor debuff."
+  description: "Start with 5 stack, when damage is taken, count -1, This is neither a buff nor debuff."
   isGoodStatus: 2
   icon: ""
 "1192101":
