--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -596,7 +596,12 @@
   isGoodStatus: 1
   icon: "status_bless"
 "1015201":
-  name: "Polaris Special"
+  name: "Polaris Special1"
+  description: "Act as number counter"
+  isGoodStatus: 2
+  icon: ""
+"1015204":
+  name: "Polaris Special2"
   description: "Act as number counter"
   isGoodStatus: 2
   icon: ""
