--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -155,6 +155,10 @@ If the skill can be activated, activate this skill again (up to 4 times). Additi
 # Polaris Mask S2 bloom passive
 8015102: "[When current VP >= 10000] Atk of all allies +10% at the start of the turn (neither buff nor debuff, cannot be dispelled) /100%"
 
+# Polaris Mask variant passive
+8015203: "[After using skill2] Random ally use skill 1 on random enemy /100% <br>\
+[when posessing 0 unleash] Apply 1 Polaris Special2 to self /100% "
+
 # Rakta S3 bloom active
 1020107: "[base skill] Skill View cost Down by 0.5x for target ally for 2 turn(s) /100% <br>\
 [base skill] Remove 2 debuff(s) from target ally /100%  <br>\
