Update some manual override

--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -55,10 +55,6 @@ of view after the skill is cast (maxed at 11000 view) /100%<br>\
 1169102: "[base skill] Heal self for 80% of own ATK value /100%<br>\
 [base skill] Remove 2 debuff(s) from self /100%<br>\
 [base skill] (extra_cond: possessing x >= 2 debuffs) Perform 1 more action(s) per turn only/100%"
-1169103: "[base skill] Deal 110% of damage to all enemies /100%<br>\
-[base skill] Decrease HP by -20% to self for 3 turn(s) /100%"
-1169104: "[base skill] Deal 110% of damage to all enemies /100%<br>\
-[base skill] Decrease HP by -20% to self for 3 turn(s) /100%"
 8169102: "[Constant activation] When Galvo's HP recovers back from <50%, ATK+10% to self (up to 50%)"
 8169103: ""
 8169104: ""
@@ -172,7 +168,7 @@ buffs up ATK Accumulation (up to 2x) /100% <br>\
 8004201: "[When invoker is alive] Allies with speed up buff gain +20% atk (doesn't stack) /100%"
 
 # Santetsu S1
-1112101: "[base skill] SPD Down by -10 to target enemy for 1 action(s) /100%.<br>\
+1112101: "[base skill] {{ 13 | status_description }} to target enemy for 1 action(s) /100%.<br>\
 [base skill] Allow Santetsu to instantly act again at most once in this turn. View cannot be acquired in this extra action."
 
 # Theoreol S3
