--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -635,6 +635,11 @@
   description: "Start with 5 stack, when damage is taken, count -1, This is neither a buff nor debuff."
   isGoodStatus: 2
   icon: ""
+"1169101":
+  name: "Scorching Fire"
+  description: "[Turn end] reduce 20% of max HP. Can be stacked even in quests with debuff duplication disabled."
+  isGoodStatus: 0
+  icon: ""
 "1192101":
   name: "Astar Buff"
   description: "Atk +20%."
