Fix scorching fire icon

--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -639,7 +639,7 @@
   name: "Scorching Fire"
   description: "[Turn end] reduce 20% of max HP. Can be stacked even in quests with debuff duplication disabled."
   isGoodStatus: 0
-  icon: ""
+  icon: "status_debuff_special"
 "1192101":
   name: "Astar Buff"
   description: "Atk +20%."
