--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -545,6 +545,11 @@
   description: "Number counter for the number of allies resurrected, start at 1, add 1 for every ally resurrected, reset at the end of turn"
   isGoodStatus: 2
   icon: ""
+"155":
+  name: "Pursuit"
+  description: "Random ally use skill 1 to target enemy."
+  isGoodStatus: 2
+  icon: ""
 "164":
   name: "Recovery Reduced 10%"
   description: "Effect of HP recovery is reduced by 10%, cannot be dispelled."
@@ -628,6 +633,16 @@
 "1031201":
   name: "Starlight"
   description: "Every time an ally except \"Starry Night\" Monomasa deals damage to enemy, charge +1 (up to 8). This is neither buff nor debuff."
+  isGoodStatus: 2
+  icon: ""
+"1031206":
+  name: "Dark Shadow"
+  description: "Increase damage received by 5% per stack. When damage is taken increase stack by +1 (max 10). This is neither buff nor debuff."
+  isGoodStatus: 2
+  icon: "status_costumedamage"
+"1031209":
+  name: "Monomasa Special"
+  description: "Act as number counter."
   isGoodStatus: 2
   icon: ""
 "1015203":
