--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -637,7 +637,7 @@
   icon: ""
 "1031206":
   name: "Dark Shadow"
-  description: "Increase damage received by 5% per stack. When damage is taken increase stack by +1 (max 10). This is neither buff nor debuff."
+  description: "Increase damage received by 5% per stack. When damage is taken increase stack by +1 (max 10). Remove all stack when target take action. This is neither buff nor debuff."
   isGoodStatus: 2
   icon: "status_costumedamage"
 "1031209":
