--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -655,6 +655,11 @@
   description: "[Turn end] reduce 20% of max HP. Can be stacked even in quests with debuff duplication disabled."
   isGoodStatus: 0
   icon: "status_debuff_special"
+"1190101":
+  name: "Locked"
+  description: "Cannot use skill 3."
+  isGoodStatus: 2
+  icon: "status_silence"
 "1192101":
   name: "Astar Buff"
   description: "Atk +20%."
