--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -570,6 +570,11 @@
   description: "When removed increase Atk by 10% for every stack (max 100% increase) at the next turn, removed at the end of this turn, neither buff nor debuff"
   isGoodStatus: 2
   icon: ""
+"202":
+  name: "Buff Cancel"
+  description: "Nullify one received buff"
+  isGoodStatus: 0
+  icon: "status_registBuff"
 "214":
   name: "Yoshiori Special"
   description: "Apply taunt to self"
@@ -637,7 +642,7 @@
   icon: ""
 "1031206":
   name: "Dark Shadow"
-  description: "Increase damage received by 5% per stack. When damage is taken increase stack by +1 (max 10). Remove all stack when target take action. This is neither buff nor debuff."
+  description: "Increase damage received by 5% per stack. When damage is taken, increase stack by +1 (max 10). Remove all stack when target take action. This is neither buff nor debuff."
   isGoodStatus: 2
   icon: "status_costumedamage"
 "1031209":
