--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -575,6 +575,11 @@
   description: "Nullify one received buff"
   isGoodStatus: 0
   icon: "status_registBuff"
+"205":
+  name: "Kouki Special"
+  description: "While alive, each debuff on enemy increase damage received by 10% (max 50%)"
+  isGoodStatus: 0
+  icon: "status_registBuff"
 "214":
   name: "Yoshiori Special"
   description: "Apply taunt to self"
