--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -365,7 +365,7 @@
   icon: "b_skill_special" 
 "74":
   name: "Reduce view Cost"
-  description: "Reduce view cost by 2000"
+  description: "Reduce view cost by 1000"
   isGoodStatus: 2
   icon: "status_awakening" 
 "75":
@@ -579,7 +579,7 @@
   name: "Kouki Special"
   description: "While alive, each debuff on enemy increase damage received by 10% (max 50%)"
   isGoodStatus: 0
-  icon: "status_registBuff"
+  icon: ""
 "214":
   name: "Yoshiori Special"
   description: "Apply taunt to self"
