--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -103,7 +103,7 @@ If the skill can be activated, activate this skill again (up to 4 times). Additi
 
 # Kouki variant Passive
 8018201: "[when appearing] (triggered when invoker is alive and target enemy possessing x > 1 debuff(s)) 
-Apply {{ 205 | status_description }} all enemies /100%"
+Apply {{ 205 | status_description }} to all enemies /100%"
 8018202: ""
 
 # Monomasa Variant Passive
