--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -600,6 +600,16 @@
   description: "Increase S1 damage by 10% per stack, max 3 stack, gain 1 stack of Steel Fist every time Andrew get def up buff"
   isGoodStatus: 2
   icon: ""
+"238":
+  name: "Stubborn"
+  description: "Special status for Obsidisus' skills, doesn't count as buff or debuff."
+  isGoodStatus: 1
+  icon: ""
+"239":
+  name: "Conversion"
+  description: "Heal for 50% of the invoker's atk every time target receive damage, doesn't take effect if the damage defeat the target"
+  isGoodStatus: 1
+  icon: "status_regenerate"
 "264":
   name: "Gospel"
   description: "Hp recovery skills invoked by self +50%"
