--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -400,7 +400,7 @@
   icon: ""
 "87":
   name: "Furlong Evasion"
-  description: "Furlong Evasion"
+  description: "Self has a chance to reduce damage received by 30%, the chance is calculated based on absolute speed difference with the enemy x 2.5% , the chance is doubled when provocation is active."
   isGoodStatus: 2
   icon: ""
 "92":
