--- a/_data/wiki/SkillManualOverride.yml
+++ b/_data/wiki/SkillManualOverride.yml
@@ -157,7 +157,7 @@ and possessing > 0 {{ 1031209 | status_description }} ) Reset {{ 1031201 | statu
 
 1160104: "[base skill] Remove 1 buff(s) from all enemies /100%<br>\
 [base skill] Deal 90% of damage to all enemies, the less enemies hit the more the damage increase up to 180% against one enemy /100%<br>\
-[When has more than 5 {{ 238 | status_description } ] Performs one more action this turn and remove 5 stack of {{ 238 | status_description } /100%"
+[When has more than 5 {{ 238 | status_description }} ] Performs one more action this turn and remove 5 stack of {{ 238 | status_description } /100%"
 
 # Obsidius Passive
 8160101: "[When buffed] Add 1 stack of {{ 238 | status_description } to self /100%"
@@ -187,7 +187,7 @@ buffs up ATK Accumulation (up to 2x) /100% <br>\
 
 # Theoreol S3
 1161103: "[base skill] Incoming damage to all allies reduced by 0.5x for 1 next attack(s) /100%.<br>\
-[base skill] Grants all allies Conversion {{ 239 | status_description }} for 2 turns /100%"
+[base skill] Grants all allies {{ 239 | status_description }} for 2 turns /100%"
 
 # Theoreol Passive
 8161101: "[In auto action] Prioritize the third skill when there is an ally with less than 50% HP"
