--- a/_data/wiki/Status.yml
+++ b/_data/wiki/Status.yml
@@ -632,9 +632,9 @@
   icon: ""
 "1035101":
   name: "Multi Observation"
-  description: "Act as number counter"
+  description: "Exio special buff"
   isGoodStatus: 2
-  icon: "status_buff_special"
+  icon: "b_skill_special"
 "1051202":
   name: "Waltz"
   description: "Atk+20% for 2 turn, cannot be given to Moonlight Shadow Nessen"
@@ -675,6 +675,11 @@
   description: "[Turn end] reduce 20% of max HP. Can be stacked even in quests with debuff duplication disabled."
   isGoodStatus: 0
   icon: "status_debuff_special"
+"1189102":
+  name: "Pledge"
+  description: "Reduce Viewpoint cost of skills by 5% per stack, except sidekick skill, not buff or debuff"
+  isGoodStatus: 0
+  icon: "status_system_awakening"
 "1190101":
   name: "Locked"
   description: "Cannot use skill 3."
